@@ -16,6 +16,14 @@ h3. Specifier-Visible Changes
 
 * <span class="label label-success">Added</span> The system property @org.eclipse.sirius.ui.enableCreatedElementsConstraintInSelectElementsListener@ has been added to allow to ignore the "created elements" constraint when the @SelectDRepresentationElementsListener@ is called to select elements after a tool execution. In other words, this allows to select an element that is not created during the tool execution. The default value of the system property is @true@. It must be set to @false@ to ignore the constraint.
 
+h3. Developer-Visible Changes
+
+* <span class="label label-info">Modified</span> Moved from Apache Batik 1.14 to version 1.16.
+* <span class="label label-info">Modified</span> Moved from GEF Classic 3.11 to version 3.14.
+* <span class="label label-info">Modified</span> Moved from GMF Notation 1.13.0 to version 1.13.1 (no code change).
+* <span class="label label-info">Modified</span> Moved from GMF Runtime 1.14.2 to version 1.15.3.
+* <span class="label label-info">Modified</span> Moved from EEF 2.1.5 to version 2.1.6.
+
 h2(#sirius7.0.5). Changes in Sirius 7.0.5
 
 h4. Migrations
